--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="theme-color" content="#000000"/>
     <meta name="description" content="Yesha inc."/>
-    <meta name="google-site-verification" content="PGJTru5_tKp4Oj3W2VituBRuoVpo1NB0E0tGOHRAS7g" /> // google workspace auth
+    <!--google workspace auth-->
+    <meta name="google-site-verification" content="PGJTru5_tKp4Oj3W2VituBRuoVpo1NB0E0tGOHRAS7g" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap&subset=cyrillic-ext"
           rel="stylesheet">
-<!--    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>-->
+    <!--<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>-->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
     <title>Yesha Dev | Just dev it! ✔</title>
 
